# python-packages

./: README.md  flake.nix  pyproject.toml  setup.cfg
PythonEDAApplicationPythonPackages/: application.py
PythonEDAPythonPackagesApplication/: application.py
