[tool.poetry]
name = "pythoneda-python-packages-application"
version = "0.0.1a2"
description = "Application layer of PythonEDA Python Packages package"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "PythonEDAPythonPackagesApplication"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda-application-layer = "^0.0.1a3"
pythoneda-python-packages = "^0.0.1a2"
pythoneda-python-packages-infrastructure = "^0.0.1a2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
