[tool.poetry]
name = "pythoneda-application-python-packages"
version = "0.0.1a3"
description = "Application layer of PythonEDA Python Packages package"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-application/python-packages"
packages = [{include = "PythonEDAApplicationPythonPackages"}]

[tool.poetry.dependencies]
python = "^3.6"
pythoneda-application-base = "^0.0.1a5"
pythoneda-infrastructure-python-packages = "^0.0.1a3"
pythoneda-python-packages = "^0.0.1a3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
